Update bio to correct 'luminescence' to 'fluorescence'

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
     <p class="role">Functional Materials Laboratory, Central University of Kerala </p>
     <div class="glow-line"></div>
     <p class="bio">
-      I am a PhD scholar at Central University of Kerala, working on the synthesis, characterization, and applications of fluorescent materials. My research focuses on understanding luminescence mechanisms via computational tools and developing new materials for sensing applications.
+      I am a PhD scholar at Central University of Kerala, working on the synthesis, characterization, and applications of fluorescent materials. My research focuses on understanding fluorescence mechanisms via computational tools and developing new materials for sensing applications.
     </p>
   </section>
 
