Add new item about green hydrogen in index.html

--- a/index.html
+++ b/index.html
@@ -663,6 +663,16 @@
         </div>
       </div>
     </div>
+	  <div class="item-list">
+      <div class="item">
+        <span class="item-num">2</span>
+        <div>
+          <h3>Green hydrogen: The fuel of tomorrow or a challenge of today?</h3>
+          <p class="meta"> Gummadi Leela Prabha Anisha, Rayudu Surya Shekhar Babu,  <b><i>Dhananjay</i></b>, Sudeena Nadendla, Shashidhar Kasthala, Ravi Kumar Kanaparthi. Next Energy, Volume 11, 2026, 100524, ISSN 2949-821X,</p>
+          <p><a href="https://www.sciencedirect.com/science/article/pii/S2949821X26000141" target="_blank" rel="noopener" style="color: var(--accent); text-decoration: none;">Link</a></p>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section id="blog">
