--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
         <span class="item-num">1</span>
         <div>
           <h3>Unravelling Cyanide Sensing Mechanisms of Colorimetric and Fluorometric Sensors</h3>
-          <p class="meta"> Dhananjay; Rayudu Surya Sekhar Babu; Gummadi Leela Prabha Anisha, Dr Ravi Kumar Kanaparthi* | NSRP-2025, Vol 37 / 1&2 Page 63-69 Conference review (2025)</p>
+          <p class="meta"> <b><i>Dhananjay</i></b>; Rayudu Surya Sekhar Babu; Gummadi Leela Prabha Anisha, Dr Ravi Kumar Kanaparthi* | NSRP-2025, Vol 37 / 1&2 Page 63-69 Conference review (2025)</p>
           <p><a href="https://www.israps.org.in/uploads/bulletins/ISRAPS_Bulletin_2025_January_1765599706.pdf" target="_blank" rel="noopener" style="color: var(--accent); text-decoration: none;">Link</a></p>
         </div>
       </div>
